# ewg

./: README.md  ewg.cabal
in/: jobs.xml
src/: Jobs.hs  ewg.hs
